--- a/readme
+++ b/readme
@@ -1,7 +1,11 @@
 
-sta_data.py是ocr的脚本，选择ocr的功能目前是脚本内实现的，1为深渊，2为副本，以后可以考虑作为外置参数
+sta_data.py是ocr的脚本，选择ocr的功能目前是脚本内实现的，1为深渊，2为副本，3为团本，以后可以考虑作为外置参数
 
-fuben_sta.py是统计副本的脚本，输入某种副本，输出汇总值，最后一列补上最高值和平均值
+fuben_sta.py是统计副本的脚本，接收一个参数为副本名字（全拼）
+输出为汇总值，包括每个人的每次成绩，参与次数，最高值，平均值以及该次总成绩
+
+cal_score.py是计算分数的脚本，内置指定计算族战团本相关分数或者是深渊分数，内置族战名单请假位置和模糊匹配字典位置，不接收输入参数
+按照深渊和团本输出不同的结果，还会输出参战了却不在族战名单里的人供使用者检查异常
 
 操作步骤
 一.深渊
@@ -12,11 +16,17 @@ fuben_sta.py是统计副本的脚本，输入某种副本，输出汇总值，最后一列补上最高值和平均
 5.运行cal_score.py得到加减分
 
 二.副本
+1.将截图放进./fuben中
+2.运行sta_data.py选择model_2
+3.人工核对，修改不正确的地方（此模式下不正确的几率很小）
+4.运行clear_file.py清洗一下，修改清洗后文件的表头
 
 三.团本
 1.将截图放进./tuanben中
 2.sta_data.py选择model_3
 3.导出结果，拉到win人工核对，修改不正确的地方，重新上传文件
+3a.注：在win上用notepad++打开，直接核对修改
 4.运行clear_file.py清洗一下并调整格式，同时放到指定的地方
 5.重复上述步骤，直到全部团本搞定之后，运行cal_score.py输出最终文件，该文件要指定model_2
 
+每两周运行一次fuben_sta.py生成统计表
